--- a/build.gradle
+++ b/build.gradle
@@ -370,3 +370,24 @@ fancyGradle {
         asm
     }
 }
+
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            from components.java
+            groupId = project.maven_group
+            artifactId = project.jar_name
+            version = "${project.mc_version}-${project.mod_version}"
+        }
+    }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/WinDanesz/AncientSpellcraft")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME_GITHUB_PACKAGES")
+                password = project.findProperty("gpr.token") ?: System.getenv("TOKEN_GITHUB_PACKAGES")
+            }
+        }
+    }
+}
