--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,14 +46,11 @@ jobs:
             chmod +x gitversion
             export VERSION=$(./gitversion | jq -r '.Patch += 1 | "\(.Major).\(.Minor).\(.Patch)-PreRelease-\(.ShortSha)"')
             echo "PROJECT_VERSION: $VERSION"
-            echo "PROJECT_VERSION=$version" >> $GITHUB_OUTPUT
+            echo "PROJECT_VERSION=$version" >> $GITHUB_ENV
           fi
 
       - name: Build with Gradle
         id: build
         env: 
           USE_ALPHAS: true
-        run: './gradlew setupGithubActions build --max-workers=1'
-
-      - name: Publish to GitHub Packages
-        run: './gradlew publish --max-workers=1'
+        run: './gradlew setupGithubActions build publish --max-workers=1'
