--- a/build.gradle
+++ b/build.gradle
@@ -315,12 +315,6 @@ processResources {
         version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
         project.mod_version = System.getenv('PROJECT_VERSION')
     }
-    if (System.getenv('GITHUB_ACTIONS') == 'true') {
-        println 'Running in GitHub actions'
-        archivesBaseName = project.jar_name.toLowerCase()
-        version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
-        project.mod_version = System.getenv('PROJECT_VERSION')
-    }    
     // this will ensure that this task is redone when the versions change.
     inputs.property "version", version.toString()
     inputs.property "mcversion", project.mc_version.toString()
@@ -391,7 +385,7 @@ publishing {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/WinDanesz/AncientSpellcraft")
             credentials {
-                username = System.getenv("GITHUB_ACTOR")
+                username = System.getenv("GITHUB_USER")
                 password = System.getenv("GITHUB_TOKEN")
             }
         }
