build: set GITHUB_USER

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -54,4 +54,5 @@ jobs:
         env: 
           USE_ALPHAS: true
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_USER: ${{ env.GITHUB_USER }}
         run: './gradlew setupGithubActions build publish --max-workers=1'
