--- a/build.gradle
+++ b/build.gradle
@@ -377,7 +377,8 @@ publishing {
             from components.java
             groupId = project.maven_group
             artifactId = project.jar_name.toLowerCase()
-            version = "${project.mc_version}-${project.mod_version}"
+            version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
+            project.mod_version = System.getenv('PROJECT_VERSION')
         }
     }
     repositories {
