--- a/build.gradle
+++ b/build.gradle
@@ -307,12 +307,7 @@ if (System.getenv('USE_ALPHAS').equals('true')) {
             }
         }
     }
-    if (System.getenv('PROJECT_VERSION') != null) {
-        version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
-        project.mod_version = System.getenv('PROJECT_VERSION')
-    } else {
-        version = "${project.mc_version}-${project.mod_version}"
-    }
+    version = "${project.mc_version}-${project.mod_version}"
 }
 
 processResources {
@@ -382,7 +377,7 @@ publishing {
             from components.java
             groupId = project.maven_group
             artifactId = project.jar_name.toLowerCase()
-            version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
+            // version = "${project.mc_version}-" + System.getenv('PROJECT_VERSION')
             project.mod_version = System.getenv('PROJECT_VERSION')
             println "version: " + version
         }
