--- a/gradle.properties
+++ b/gradle.properties
@@ -40,3 +40,5 @@
 # Gradle
     org.gradle.jvmargs=-Xmx3G
     org.gradle.daemon=false
+
+    coremod_plugin_class_name=com.windanesz.ancientspellcraft.AncientSpellcraftMixinLoader
