--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,9 @@ minecraft {
     def args = ["-Dmixin.debug.export=true",
                 '-Dmixin.hotSwap=true',
                 '-Dmixin.checks.interfaces=true',
-                '--username', 'WinDanesz', '--user', 'WinDanesz', '--uuid', '7faee354-8c60-4f5c-9862-fc0ce5f7f575']
+                '--username', 'WinDanesz', '--user', 'WinDanesz', '--uuid', '7faee354-8c60-4f5c-9862-fc0ce5f7f575',
+                '-Dfml.coreMods.load=' + coremod_plugin_class_name
+    ]
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
     runs {
@@ -180,7 +182,10 @@ jar {
                 "Implementation-Vendor" :"WinDanesz",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                 "Built-On-Java": "${System.getProperty('java.vm.version')} (${System.getProperty('java.vm.vendor')})",
-                "Built-On": "${project.mc_version}-${project.forge_version}"
+                "Built-On": "${project.mc_version}-${project.forge_version}",
+                "FMLCorePlugin": project.coremod_plugin_class_name,
+                "FMLCorePluginContainsFMLMod": true,
+                "ForceLoadAsMod": project.gradle.startParameter.taskNames[0] == "build",
         ])
     }
 }
