--- a/gradle.properties
+++ b/gradle.properties
@@ -37,6 +37,9 @@
     antiqueatlas_fileid=2823030
     mixinbooter_projectid=419286
     mixinbooter_fileid=4828995
+    wizardry_utils_version=1.2.1
+    wizardryutils_projectid=608287
+    wizardryutils_fileid=5160245
 # Gradle
     org.gradle.jvmargs=-Xmx3G
     org.gradle.daemon=false
