feat: Sage tomes render as 3D

--- a/build.gradle
+++ b/build.gradle
@@ -61,7 +61,7 @@ minecraft {
     mappings channel: project.mappings_channel, version: "${project.mappings_version}-${project.mappings_mc_version}"
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
 
-    // accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
     def args = ["-Dmixin.debug.export=true",
                 '-Dmixin.hotSwap=true',
